name:          simdhs
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
cabal-version: >=1.8
tested-with:   GHC >=7.8
build-type:    Simple
maintainer:    Parker Liu
category:      Compilers
synopsis:      Simd examples for the llvm-hs library
description:   Simd examples using the llvm-hs library
extra-source-files:
  README.md

Source-Repository head
    type: git
    location: git@github.com:flyfish30/simd-hs.git

library
  hs-source-dirs:   src
  exposed-modules:  SimdLlvm
  build-depends:
      base               >=4.7   && <4.15
    , bytestring         >=0.10  && <0.11
    , containers         >=0.6   && <0.7
    , deepseq            >=1.4   && <1.5
    , llvm-hs            >=9.0   && <9.1
    , llvm-hs-pretty     >=0.9   && <0.10
    , llvm-hs-pure       >=9.0   && <9.1
    , mtl                >=2.2.2 && <2.3
    , recursion-schemes  >=5.1   && <5.2
    , text               >=1.2   && <1.3
    , transformers       >=0.5   && <0.6
  ghc-options:      -O2
  default-language: Haskell2010

executable simdcg
  main-is:          src/Main.hs
  build-depends:
      base               >=4.7   && <4.15
    , simdhs
  default-language: Haskell2010

